--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 # RabbitMQ Settings
 RMQ_ENABLED=1
-RMQ_HOST=localhost
+RMQ_HOST=100.127.255.2
 RMQ_VHOST=/
 RMQ_PORT=5672
 RMQ_USERNAME=guest
@@ -11,7 +11,7 @@ RMQ_KEY=email
 SMTP_HOST=smtp.gmail.com
 SMTP_AUTH=1
 SMTP_USER=jholguin9004@gmail.com
-SMTP_PASS=need_configure_pass
+SMTP_PASS=somepassword
 SMTP_SECURE=TLS
 SMTP_PORT=587
 SMTP_FROM_MAIL=jholguin9004@gmail.com
