--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,17 +5,16 @@ services:
     build: .
     container_name: rabbitmq_client
     volumes:
-      - .:/var/www/html/sites/default/files
+      - .:/var/www/html
     ports:
-      - 8091:80
-    env_file:
-      - .env
+      - 8090:80
     tty: true
     restart: always
     networks:
       - net1
 networks:
   net1:
+    name: net1
     driver: bridge
     internal: false
     ipam:
